--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -7,7 +7,7 @@
     </a>
     <ul style="font-size: 18px">
         {% for evento in eventos %}
-            <li>{{ evento.titulo }} - {{ evento.get_data_evento }}</li>
+            <li>{{ evento.titulo }} - {{ evento.get_data_evento }} - Local: {{ evento.local_evento }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
