--- a/templates/evento.html
+++ b/templates/evento.html
@@ -13,6 +13,10 @@
     <br>
     <input type="datetime-local" name="data_evento">
     <br>
+    <label>Local do evento</label>
+    <br>
+    <input type="text" name="local_evento">
+    <br>
     <label>Descricao</label>
     <br>
     <textarea name="drecricao" rows="5" cols="26"></textarea>
